--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -37,7 +37,7 @@
    <tr>
      <td>Actions</td>
      <td>
-       <div class="ui red button" {{action "remove" project}}>Delete (temp)</div>
+       <div class="ui red button" {{action "confirmDelete" model project}}>Delete</div>
        <LinkTo class="ui green button" @route="projects.edit" @model={{project.id}}>Edit</LinkTo>
 
           {{outlet project.id}}
