--- a/app/templates/projects/stories.hbs
+++ b/app/templates/projects/stories.hbs
@@ -32,4 +32,15 @@
     </div>
 </div>
 </div>
+
+<div class="ui segment">
+<h3>Project Stories:</h3>
+
+{{#each this.modal.story as |story|}}
+Description: {{story.descriptif}}
+{{/each}}
+
+</div>
+
+
 </div>
