--- a/app/templates/projects/stories.hbs
+++ b/app/templates/projects/stories.hbs
@@ -36,7 +36,7 @@
 <div class="ui segment">
 <h3>Project Stories:</h3>
 
-{{#each modal.story as |story|}}
+{{#each model.stories as |story|}}
 Description: {{story.descriptif}}
 {{/each}}
 
