--- a/app/templates/projects/stories.hbs
+++ b/app/templates/projects/stories.hbs
@@ -34,16 +34,35 @@
 </div>
 
 <div class="ui segment">
-  <LinkTo class="ui green button" @route="projects.stories.new" @model={{model.id}}>
-Add Story
-  </LinkTo>
 <h3>Project Stories:</h3>
 
-{{#each model.stories as |story|}}
-Description: {{story.descriptif}}
-{{/each}}
 
+{{#each model.stories as |story|}}
+<div class="ui green segment">
+  {{story.description}}
+  <div {{action 'deleteStory' story model model.stories}} class="ui vertical animated red button" tabindex="0" style="float:right;">
+  <div class="hidden content">Delete</div>
+  <div class="visible content">
+  <i class="close alternate icon"></i>
+  </div>
+  </div>
+  <br><br>
 </div>
 
+{{/each}}
+
+
+
+<div class="ui divider"/>
+<div class="ui grey inverted segment" style="text-align: center;">
+  <LinkTo class="ui animated fade green button" tabindex="0" @route="projects.stories.new" @model={{model.id}}>
+      <div class="visible content">Add Story</div>
+      <div class="hidden content">
+        <i class="plus icon"></i>
+      </div>
+    </LinkTo>
+
+</div>
+</div>
 
 </div>
