--- a/app/templates/projects/stories.hbs
+++ b/app/templates/projects/stories.hbs
@@ -1,7 +1,7 @@
 {{outlet}}
 
 <div class="ui segment">
-  <h1>Stories: {{model.name}}</h1>
+  <h1>Board: {{model.name}}</h1>
 
 <div class="ui segment">
   <h3>Project Informations:</h3>
@@ -39,14 +39,24 @@
 
 {{#each model.stories as |story|}}
 <div class="ui green segment">
-  {{story.description}}
+
+  <div class="ui big label">
+    {{story.description}}
+  </div>
   <div {{action 'deleteStory' story model model.stories}} class="ui vertical animated red button" tabindex="0" style="float:right;">
   <div class="hidden content">Delete</div>
   <div class="visible content">
   <i class="close alternate icon"></i>
   </div>
   </div>
-  <br><br>
+  
+  <LinkTo class="ui vertical animated green button" @route="projects.stories.edit" @model={{story.id}} style="float: right;">
+    <div class="hidden content">Edit</div>
+    <div class="visible content">
+    <i class="edit icon"></i>
+    </div>
+  </LinkTo>
+  <br>
 </div>
 
 {{/each}}
@@ -62,6 +72,23 @@
       </div>
     </LinkTo>
 
+</div>
+</div>
+
+<!-- Valider la suppression -->
+<div class="ui modal delete">
+  <div class="header">Do you want delete {{model.toDelete.name}} ?</div>
+  <div class="content">
+    <div class="description">
+      <div class="actions">
+       <div {{action "remove" model.toDelete}} class="ui green deny button">
+             Yes
+       </div>
+       <div class="ui red deny button">
+             No
+       </div>
+    </div>
+  </div>
 </div>
 </div>
 
