--- a/app/templates/projects/stories/new.hbs
+++ b/app/templates/projects/stories/new.hbs
@@ -32,7 +32,7 @@
 
 
 <div class="ui bottom attached message">
-    <button class="ui button inverted positive icon" {{action 'addNew' model.code model.description model model.id model}} ><i class="check circle icon" />
+    <button class="ui button inverted positive icon" {{action 'addNew' model.code model.description model model.id}} ><i class="check circle icon" />
         Validate</button>
     <button class="ui button inverted red icon" {{action 'cancel' model.id model}}><i
             class="icon times circle outline" /> Cancel</button>
