--- a/app/templates/projects/stories/tags/new.hbs
+++ b/app/templates/projects/stories/tags/new.hbs
@@ -30,7 +30,7 @@
                       <p style="color:#FBBD08">Yellow</p>
                   </option>
                   <option value="#b5cc18">
-                      <p style="color:#b5cc18">Olive</p>
+                      <p style="color:#b5cc18">Olivee</p>
                   </option>
               </select>
   </div>
