--- a/app/templates/projects/stories.hbs
+++ b/app/templates/projects/stories.hbs
@@ -36,7 +36,6 @@
 <div class="ui segment">
 <h3>Project Stories:</h3>
 
-
 {{#each model.stories as |story|}}
 <div class="ui green segment">
 
@@ -57,7 +56,7 @@
     </div>
   </LinkTo>
 
-  <LinkTo class="ui vertical animated green button" @route="projects.stories.tags.new" @model={{story.id}} style="float: right;">
+  <LinkTo class="ui vertical animated green button" @route="projects.stories.tags.index" @model={{story.id}} style="float: right;">
     <div class="hidden content">Add Tag</div>
     <div class="visible content">
     <i class="add icon"></i>
