--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,15 +3,5 @@ h1{
 }
 
 body{
-  background-color: #D0FFB7;
-}
-
-.ui.three.item.menu{
-
-}
-.ui.three.item.menu .active.item{
-
-}
-.ui.three.item.menu .item{
-
+  background-color: #24BA45;
 }
