--- a/app/templates/projects/stories/tags/index.hbs
+++ b/app/templates/projects/stories/tags/index.hbs
@@ -1,25 +1,33 @@
 <div class="ui message attached icon">
-    <i class="close icon" {{action 'cancel' model.id model}}></i>
+    <i class="close icon" {{action 'cancel' model.story.id model}}></i>
     <div class="content">
         <div class="header">
-            Add Tag {{model.story.id}}
+            Add Tag to {{model.story.description}}
+            {{model.story.tags }}
         </div>
     </div>
 </div>
 <div class="ui form attached fluid segment">
   {{#each model.tags as |tag|}}
-  <a class="ui label" style="background-color:{{tag.color}}">{{tag.title}} <i class="delete icon"></i> </a>
+  <div class="ui icon buttons">
+    <button class="ui button" {{action "addTagToStory" tag model.story}} style="background-color:{{tag.color}};color:white">
+      {{tag.title}}
+    </button>
+    <button class="ui button" {{action "deleteTag" tag}} style="background-color:{{tag.color}};color:white">
+      <i class="delete icon"></i>
+    </button>
+  </div>
+
   {{/each}}
     </div>
 
 <div class="ui bottom attached message">
-    <button class="ui button inverted positive icon"><i class="check circle icon"/>
-        Validate</button>
-    <button class="ui button inverted red icon" {{action 'cancel' model.id model}}>
+    <button class="ui button inverted positive icon" {{action 'cancel' model.story.id model}}>
+      <i class="check circle icon"/>Validate</button>
+    <button class="ui button inverted red icon" {{action 'cancel' model.story.id model}}>
       <i class="icon times circle outline" /> Cancel</button>
     <LinkTo class="ui button yellow icon" @route="projects.stories.tags.new" @model={{model.story.id}} style="float:right">
-      <i class="plus circle icon" />
-    Create Tag</LinkTo>
+      <i class="plus circle icon" />Create Tag</LinkTo>
 </div>
 
 
