--- a/app/templates/projects/edit.hbs
+++ b/app/templates/projects/edit.hbs
@@ -41,16 +41,34 @@
             <Input @value={{model.dueDate}} type="date" name="dateE" placeholder="Y-M-D" class="ui input"/>
         </div>
     </div>
+    <div class="ui labeled input field" data-children-count="1">
+        <div class="ui label">
+            Owner
+        </div>
+
+        {{#ui-dropdown class="ui selection compact" onChange=(action (mut model.developer)) as |execute mapper|}}
+     <div class="default text">Select new developer</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+           {{#each model.developers as |dev|}}
+              <div data-value={{map-value mapper dev}} class="item">
+                 {{dev.name}} {{dev.fname}}
+              </div>
+           {{/each}}
+       </div>
+        {{/ui-dropdown}}
+
+    </div>
 
     {{#if model.error}}
         <div class="ui inverted red segment">
       <p>All fields are required.</p>
     </div>
     {{/if}}
-    
+
 </div>
 <div class="ui bottom attached message">
-    <button class="ui button inverted positive icon" {{action 'edit' model}}><i class="check circle icon" />
+    <button class="ui button inverted positive icon" {{action 'edit' model model.developer}}><i class="check circle icon" />
         Validate</button>
     <button class="ui button inverted red icon" {{action 'backToProj'}}><i
             class="icon times circle outline" /> Cancel</button>
