--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -38,7 +38,7 @@ Click on <a href="/developers/new">Add Developper</a> to add a new developper.</
 
 <div class="ui segment" style="text-align: center;">
   <div {{action "transitionAdd"}} class="ui animated fade green button" tabindex="0">
-      <div class="visible content">Add Developper</div>
+      <div class="visible content">Add Developer</div>
       <div class="hidden content">
         <i class="plus icon"></i>
       </div>
