--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{!-- The following component displays Ember's default welcome message. --}}
 <div class="ui container"><br>
-<div class="ui segment"><h1>Project BigBrain: Boards</h1>
+<div class="ui segment"><h1>Project: Boards</h1>
   <div class="ui three item menu"> <!-- MENU -->
     <a href="/home" class="active item">Home</a>
     <a href="/projects" class="item">Projects</a>
